Fix CSS layout problems with Chrome

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,10 @@
 @import "books";
 @import "pages";
 @import "sessions";
+
+html, body {
+  height:100%;
+}
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
