--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -15,10 +15,12 @@ $list-height: 300px;
     border-bottom: 1px solid $gray-lighter;
     align-items: center;
     height:$list-height;
+    padding:0px 15px 0px 0px;
   }
 
   .left {
-    margin:0 10px 0 0;
+    margin:0px;
+    padding:0px;
     display:flex;
     align-items: center;
     height:$list-height;
@@ -30,14 +32,13 @@ $list-height: 300px;
     }
 
     .status-and-image {
-      max-height:300px;
-      max-width:100%;
+      max-width:90%;
     }
 
     img {
-      height:100%;
-      max-height: 300px;
-      max-width:100%;
+      max-height:$list-height;
+      max-width:95%;
+      max-height: 95%;
     }
   }
 }
@@ -83,9 +84,11 @@ padding-top: 100%;
 .show-book {
   margin:0px auto;
   max-width:1000px;
+  height:100%;
   img {
     width:100%;
     max-width:300px;
+    max-height:500px;
   }
 
   input, button {
