--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -59,6 +59,7 @@ a:hover {
 
 .secondary-title {
   font-family: 'Open Sans', sans-serif;
+  font-size:90%;
 }
 
 
